@@ -32,9 +32,13 @@ exit(1) if not Torrus::SiteConfig::verify();
 
 my $tree;
 my $help_needed;
-our $verbose = 0;
+my $verbose = 0;
 
-our $outfile = 'snapshot.xml';
+my $outfile = 'snapshot.xml';
+
+my $filter_param;
+my $filter_value;
+my $filter_op = '=';
 
 my $creator = "Torrus version @VERSION@\n" .
     "This file was generated by command:\n" .
@@ -54,15 +58,24 @@ $creator .= "\nOn " . scalar(localtime(time));
 
 my $ok = GetOptions('tree=s'   => \$tree,
                     'out=s'    => \$outfile,
+                    'param=s'  => \$filter_param,
+                    'value=s'  => \$filter_value,
+                    'op=s'     => \$filter_op,
                     'verbose'  => \$verbose,
                     'help'     => \$help_needed);
 
-if( not $ok or not $tree or $help_needed or scalar(@ARGV) > 0 )
+if( not $ok or not $tree or $help_needed or
+    ( defined($filter_param) + defined($filter_value) == 1 ) or
+    ( $filter_op ne '=' and $filter_op ne 'eq' and $filter_op ne 're' ) or
+    scalar(@ARGV) > 0 )
 {
     print STDERR "Usage: $0 --tree=NAME [options...]\n",
     "Options:\n",
     "  --tree=NAME     tree name\n",
     "  --out=filename  output file [".$outfile."]\n",
+    "  --param=PARAM --value=VALUE \n",
+    "                  filter the output by leaves with specified value\n",
+    "  --op=OP         filter operation [=|eq|re], default: [=]\n",
     "  --verbose       print extra information\n",
     "  --help          this help message\n";
     exit 1;
@@ -100,6 +113,22 @@ if( not defined( $config_tree ) )
 }
 
 
+my $filter_match = sub {return $_[0] == $filter_value};
+
+if(defined($filter_param))
+{
+    if( $filter_op eq 'eq' )
+    {
+        $filter_match = sub {return $_[0] eq $filter_value};
+    }
+    elsif( $filter_op eq 're' )
+    {
+        $filter_match = sub {return $_[0] =~ $filter_value};
+    }
+}
+
+
+        
 my $cb = new Torrus::ConfigBuilder;
 
 $cb->addCreatorInfo( $creator );
@@ -187,20 +216,58 @@ sub collect_definitions
 }
 
 
+my %filterTokens;
+
+
 sub collect_datasources
 {
     my $config_tree = shift;
     my $cb = shift;
-
+    
     my $topNode = $cb->getTopSubtree();
     my $topToken = $config_tree->token('/');
     
     my $params = prepare_params( $config_tree, $topToken );
     $cb->addParams( $topNode, $params );
 
+    if( defined($filter_param) )
+    {
+        $filterTokens{$topToken} = apply_filter( $config_tree, $topToken );
+    }
+    
     collect_subtrees( $config_tree, $cb, $topToken, $topNode );
 }
         
+
+
+sub apply_filter
+{
+    my $config_tree = shift;
+    my $token = shift;
+
+    $filterTokens{$token} = 0;
+    
+    foreach my $ctoken ( $config_tree->getChildren( $token ) )
+    {
+        if( $config_tree->isSubtree( $ctoken ) )
+        {
+            $filterTokens{$token} += apply_filter( $config_tree, $ctoken );
+        }
+        elsif( $config_tree->isLeaf( $ctoken ) )
+        {
+            my $val = $config_tree->getNodeParam( $ctoken, $filter_param );
+            if( defined($val) and &{$filter_match}($val) )
+            {
+                $filterTokens{$ctoken} = 1;
+                $filterTokens{$token}++;
+            }                
+        }
+    }
+
+    return $filterTokens{$token};
+}
+        
+
 
 sub collect_subtrees
 {
@@ -211,23 +278,28 @@ sub collect_subtrees
 
     foreach my $ctoken ( $config_tree->getChildren( $token ) )
     {
-        my $childName = $config_tree->nodeName( $config_tree->path($ctoken) );
-        my $params = prepare_params( $config_tree, $ctoken );
+        if( not defined($filter_param) or $filterTokens{$ctoken} )
+        {
+            my $childName =
+                $config_tree->nodeName( $config_tree->path($ctoken) );
+            my $params = prepare_params( $config_tree, $ctoken );
         
-        if( $config_tree->isSubtree( $ctoken ) )
-        {
-            my $subtreeNode =
-                $cb->addSubtree( $parentNode, $childName, $params );
-            collect_subtrees( $config_tree, $cb, $ctoken, $subtreeNode );
-        }
-        elsif( $config_tree->isLeaf( $ctoken ) )
-        {
-            $cb->addLeaf( $parentNode, $childName, $params );
-        }
-
-        foreach my $aliasToken ( $config_tree->getAliases( $ctoken ) )
-        {
-            $cb->addAlias( $parentNode, $config_tree->path( $aliasToken ) );
+            if( $config_tree->isSubtree( $ctoken ) )
+            {
+                my $subtreeNode =
+                    $cb->addSubtree( $parentNode, $childName, $params );
+                collect_subtrees( $config_tree, $cb, $ctoken, $subtreeNode );
+            }
+            elsif( $config_tree->isLeaf( $ctoken ) )
+            {
+                $cb->addLeaf( $parentNode, $childName, $params );
+            }
+            
+            foreach my $aliasToken ( $config_tree->getAliases( $ctoken ) )
+            {
+                $cb->addAlias( $parentNode,
+                               $config_tree->path( $aliasToken ) );
+            }
         }
     }
 }
